--- a/bundles.html
+++ b/bundles.html
@@ -15,7 +15,7 @@
 
 
 
-    <title>All Bundles - Toolswala</title>
+    <title>All Bundles - Softwarewalaa</title>
     <meta name="description"
         content="Explore affordable software bundles at World’s Best Tool Provider. Find high-quality solutions to boost productivity with one-click access.">
     <meta name="keywords"
@@ -281,35 +281,51 @@
 
                         <ul class="list-group list-group-flush ">
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Envato Element</span>
+                                <span>Helium 10</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Moz</span>
+                                <span>Jungle Scout</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Semrush</span>
+                                <span>Viral Launch</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Writesonic</span>
+                                <span>Egrow</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Ubersuggest</span>
+                                <span>minea</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Vyond</span>
+                                <span>amzscout</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>PicMonkey</span>
+                                <span>Rocket Source</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Vista Create</span>
+                                <span>Nice Scraper</span>
+                                <i class="icon-min m-0 icon-check text-right"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
+                                <span>Xenon hunt</span>
+                                <i class="icon-min m-0 icon-check text-right"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
+                                <span>Sell The Trend</span>
+                                <i class="icon-min m-0 icon-check text-right"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
+                                <span>Chat GPT</span>
+                                <i class="icon-min m-0 icon-check text-right"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
+                                <span>Canva Pro</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
@@ -317,109 +333,13 @@
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Prezi</span>
+                                <span>Skill Share</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Answer the Public</span>
+                                <span>Linked In learning</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Design AI</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Scribd</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Wordtune</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>CanvaPro</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Skillshare</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>MotionArray</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Pick It</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Serpstat</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Storybase</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>SEO Optimizer</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>SpyFu</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>SimilarWeb</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Creator AI</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Vecteezy</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Coursera</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Quillbot Premium</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Turnitin Student</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Leonardo AI</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Word AI</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Word Hero</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Jasper.ai</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>InVideo.io Unlimited</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>PicsArt</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>SEOSite Checkup</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
+                            </li>                            
                         </ul>
                         <a type="button"
                             id='bundleBuy' class=" btn mx-auto primary-button buy-button"><i class="icon-arrow-right-circle"></i>Buy
@@ -563,7 +483,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Toolswalaa
+                                Softwarewalaaa
                             </a>
                             <br>
                             <br>
