--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,7 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Contact us - Toolswalaa</title>
+    <title>Contact us - Softwarewalaaa</title>
 
 
     <meta name="description" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
@@ -292,7 +292,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Toolswalaa
+                                Softwarewalaaa
                             </a>
                             <br>
                             <br>
