--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Home Page Meta Information -->
-    <title>The World Best Tool Provider - Toolswala </title>
+    <title>The World Best Tool Provider - Softwarewalaa </title>
     <meta name="description"
         content="Shop 20+ affordable, high-quality tools with one-click access at World’s Best Tool Provider. Quality equipment for hobbyists and professionals.">
     <meta name="keywords"
-        content="Toolswalaa, tool provider, software bundles, affordable tools, tool provider, tool bundles, quality tool, Agency tool">
+        content="Softwarewalaaa, tool provider, software bundles, affordable tools, tool provider, tool bundles, quality tool, Agency tool">
     <link rel="canonical" href="https://www.softwarewalaa.com/" />
 
 
@@ -291,7 +291,7 @@
                     <div class="row intro">
                         <div class="col-12 p-0">
                             <h2>Tools Power Your Progress</h2>
-                            <p>Unlock endless possibilities with Toolswala. Our innovative digital tool streamline your workflow, boost productivity, and drive your business success. Embrace the future with us today!</p>
+                            <p>Unlock endless possibilities with Softwarewalaa. Our innovative digital tool streamline your workflow, boost productivity, and drive your business success. Embrace the future with us today!</p>
                         </div>
                     </div>
                     <!--                    <div class="row items">-->
@@ -376,35 +376,51 @@
 
                         <ul class="list-group list-group-flush ">
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Envato Element</span>
+                                <span>Helium 10</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Moz</span>
+                                <span>Jungle Scout</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Semrush</span>
+                                <span>Viral Launch</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Writesonic</span>
+                                <span>Egrow</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Ubersuggest</span>
+                                <span>minea</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Vyond</span>
+                                <span>amzscout</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>PicMonkey</span>
+                                <span>Rocket Source</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Vista Create</span>
+                                <span>Nice Scraper</span>
+                                <i class="icon-min m-0 icon-check text-right"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
+                                <span>Xenon hunt</span>
+                                <i class="icon-min m-0 icon-check text-right"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
+                                <span>Sell The Trend</span>
+                                <i class="icon-min m-0 icon-check text-right"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
+                                <span>Chat GPT</span>
+                                <i class="icon-min m-0 icon-check text-right"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
+                                <span>Canva Pro</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
@@ -412,109 +428,13 @@
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Prezi</span>
+                                <span>Skill Share</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Answer the Public</span>
+                                <span>Linked In learning</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Design AI</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Scribd</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Wordtune</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>CanvaPro</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Skillshare</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>MotionArray</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Pick It</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Serpstat</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Storybase</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>SEO Optimizer</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>SpyFu</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>SimilarWeb</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Creator AI</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Vecteezy</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Coursera</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Quillbot Premium</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Turnitin Student</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Leonardo AI</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Word AI</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Word Hero</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Jasper.ai</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>InVideo.io Unlimited</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>PicsArt</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>SEOSite Checkup</span>
-                                <i class="icon-min m-0 icon-check text-right"></i>
-                            </li>
+                            </li>                            
                         </ul>
                         <a type="button"
                             id='bundleBuy' class=" btn mx-auto primary-button buy-button"><i class="icon-arrow-right-circle"></i>Buy
@@ -1078,7 +998,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Toolswalaa
+                                Softwarewalaaa
                             </a>
                             <br>
                             <br>
