--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,7 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Privacy and Policy - Toolswalaa</title>
+    <title>Privacy and Policy - Softwarewalaaa</title>
 
 
     <meta name="robots" content="noindex">
@@ -230,16 +230,16 @@
                 </p>
                 <p>
                     The privacy of our visitors is very important to us at
-                    <a href="http://softwarewalaa.com" target="_blank" rel="noopener noreferrer">Toolswalaa</a>
+                    <a href="http://softwarewalaa.com" target="_blank" rel="noopener noreferrer">Softwarewalaaa</a>
                     This privacy policy paper
                     goes into great detail about the different kinds of personal data that <a
-                        href="http://softwarewalaa.com" target="_blank" rel="noopener noreferrer">Toolswalaa</a>
+                        href="http://softwarewalaa.com" target="_blank" rel="noopener noreferrer">Softwarewalaaa</a>
                     gathers,
                     stores, and uses.
                 </p>
                 <p>
                     Log Files: <a href="http://softwarewalaa.com" target="_blank"
-                        rel="noopener noreferrer">Toolswalaa</a> uses log files, much like a lot of other
+                        rel="noopener noreferrer">Softwarewalaaa</a> uses log files, much like a lot of other
                     websites. These files do
                     nothing more than record website visits, which is typically a regular practice for hosting firms and
                     is included in the analytics of hosting services. Internet protocol (IP) addresses, browser types,
@@ -252,7 +252,7 @@
                 <p>
 
                     Cookie Use and Web Beacons: Log Files: <a href="http://softwarewalaa.com" target="_blank"
-                        rel="noopener noreferrer">Toolswalaa</a> uses log files, much like a lot of other
+                        rel="noopener noreferrer">Softwarewalaaa</a> uses log files, much like a lot of other
                     websites. These files do
                     uses cookies to store user-specific information about
                     the pages a visitor accesses or visits, to record information about their preferences, and to
@@ -265,7 +265,7 @@
                     opt-out of certain practices, you should review their individual privacy policies. The privacy
                     statement
                     of Log Files: <a href="http://softwarewalaa.com" target="_blank"
-                        rel="noopener noreferrer">Toolswalaa</a> uses log files, much like a lot of other
+                        rel="noopener noreferrer">Softwarewalaaa</a> uses log files, much like a lot of other
                     websites. These files do
                     does not apply to these other advertisers or websites, and we have no control
                     over
@@ -289,13 +289,13 @@
                     supervise, and/or manage their online behavior. Children under the age of thirteen are not
                     intentionally
                     asked for personally identifiable information by Log Files: <a href="http://softwarewalaa.com"
-                        target="_blank" rel="noopener noreferrer">Toolswalaa</a> uses log files, much like a lot
+                        target="_blank" rel="noopener noreferrer">Softwarewalaaa</a> uses log files, much like a lot
                     of other websites. These files do
                     Please get in touch with us
                     right
                     away (using the information in the first paragraph) if a parent or guardian thinks that
                     Log Files: <a href="http://softwarewalaa.com" target="_blank"
-                        rel="noopener noreferrer">Toolswala</a> uses log files, much like a lot of other
+                        rel="noopener noreferrer">Softwarewalaa</a> uses log files, much like a lot of other
                     websites. These files do
                     has personally identifiable information about a child under the age of 13 in its
                     database. We will do everything in our power to swiftly delete such information from our records.
@@ -336,7 +336,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Toolswalaa
+                                Softwarewalaaa
                             </a>
                             <br>
                             <br>
