--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -11,7 +11,7 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Terms and Conditions - Toolswalaa</title>
+    <title>Terms and Conditions - Softwarewalaaa</title>
 
     <meta name="robots" content="noindex" />
 
@@ -250,26 +250,26 @@
         <div class="terms">
       <h3>Terms and Conditions</h3>
       <p>
-        By using Toolswalaa and completing an order, you attest that you
+        By using Softwarewalaaa and completing an order, you attest that you
         understand and agree to be governed by the terms and conditions listed
         in the Terms of Use section below. These terms govern your use of the
         whole website as well as any emails and other correspondence that you
-        may have with Toolswalaa. The Toolswalaa team disclaims all liability
+        may have with Softwarewalaaa. The Softwarewalaaa team disclaims all liability
         for any direct, indirect, special, incidental, or consequential damages
         that may result from using or not using the materials on this website,
         including but not limited to loss of data or profit. This disclaimer
-        applies even if the Toolswalaa team or an authorized representative has
+        applies even if the Softwarewalaaa team or an authorized representative has
         been made aware of the possibility of such damages. You are responsible
         for any expenses associated with servicing, repairing, or correcting
         equipment or data as a result of using materials from this website.
-        Toolswalaa disclaims all liability for any consequences that may arise
+        Softwarewalaaa disclaims all liability for any consequences that may arise
         from using our resources. We maintain the right to alter the costs and
         the guidelines for using our resources at any time.
       </p>
 
       <h6>Billing</h6>
       <p>
-        Toolswalaa does not charge a recurring fee. All transactions are
+        Softwarewalaaa does not charge a recurring fee. All transactions are
         initiated by the user, and we do not save any billing-related data. We
         use third-party payment gateways such as Razorpay and CCAvenue to
         process all orders.
@@ -277,7 +277,7 @@
 
       <h6>Services</h6>
       <p>
-        Toolswalaa reserves the right to change the price and validity of any
+        Softwarewalaaa reserves the right to change the price and validity of any
         service at any time. We may also impose limits on any tool depending on
         availability.
       </p>
@@ -291,7 +291,7 @@
 
       <h6>Account Ban</h6>
       <p>
-        If a user shares their account details with others, Toolswalaa reserves
+        If a user shares their account details with others, Softwarewalaaa reserves
         the right to permanently ban the user’s account without notification.
         Multiple logins from the same IP (using proxy or the same ISP) on the
         same day can result in account suspension.
@@ -299,10 +299,10 @@
 
       <h6>Important</h6>
       <p>
-        Toolswalaa strictly prohibits accessing our website's source code or
+        Softwarewalaaa strictly prohibits accessing our website's source code or
         reverse engineering our extension/website. If you wish to use a cookie
         manager extension, you must first remove our extension and log out from
-        Toolswalaa.
+        Softwarewalaaa.
       </p>
 
       <h6>Refund Limitations</h6>
@@ -310,7 +310,7 @@
         No refunds will be provided if you contact us more than 30 days after
         the order placement date, regardless of whether you received the
         product, your account was active, or you were able to use the service.
-        Toolswalaa requires Anydesk or TeamViewer for technical support.
+        Softwarewalaaa requires Anydesk or TeamViewer for technical support.
       </p>
     </div>
     </section>
@@ -323,7 +323,7 @@
           <div class="row items footer-widget content">
             <div class="col-lg-5 p-3 text-center text-lg-left item">
               <div class="brand">
-                <a href="https://softwarewalaa.com" class="logo"> Toolswala </a>
+                <a href="https://softwarewalaa.com" class="logo"> Softwarewalaa </a>
                 <br />
                 <br />
                 <ul class="navbar-nav social share-list mt-0">
