--- a/refund-and-cancellation.html
+++ b/refund-and-cancellation.html
@@ -13,7 +13,7 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Refund Policy - Toolswala</title>
+    <title>Refund Policy - Softwarewalaa</title>
 
 
     <meta name="robots" content="noindex">
@@ -261,7 +261,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Toolswalaa
+                                Softwarewalaaa
                             </a>
                             <br>
                             <br>
